# scrapy-history-middleware

./: .gitignore  AUTHORS  LICENSE  README.md  circle.yml  dev-requirements.txt  requirements.txt  runtests.sh  setup.cfg  setup.py  teamcity_test.sh  tox.ini
history/: __init__.py  logic.py  middleware.py  storage.py
tests/: test_middleware.py
