[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal = 0

[flake8]
# ignore = E226,E302,E41
max-line-length = 100

[isort]
atomic = True
# check_only = True
combine_as_imports = True
combine_star = True
force_sort_within_sections = True
include_trailing_comma = True
indent = '    '
known_standard_library=__future__
length_sort = False
line_length = 100
lines_after_imports = 2
order_by_type = False
multi_line_output = 1

[nosetests]
# same as passing `-v` flag
verbosity = 2
with-timer = 1

[metadata]
license = Copyright (c) 2014-2017 Kpler S.A.S., all right reserved. Proprietary and confidential, not for distribution.
description-file = README.md
